fix last column not showing entirely in board view #113

--- a/resources/public/css/custom.css
+++ b/resources/public/css/custom.css
@@ -105,12 +105,12 @@ Fixed Header for table
 .tableFixHead th,
 td {
     max-width: 20px !important;
+    padding-right: 10px;
 }
 
 .tableFixHead tbody tr:nth-child(even) {background: #EBF4FA}
 .tableFixHead tbody tr:nth-child(odd) {background: white}
 .tableFixHead tbody img {opacity: 0.2;}
-
 
 /**
 TABLE
